--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Mon beau site</h1>
+    <p>Pour transmettre les infos : git push origin master et pour recevoir les infos c'est git pull origin master</p>
 </body>
 </html>
